<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.vd.bpm.test</groupId>
    <artifactId>bonita-toolbox</artifactId>
    <version>7.4.1-vd-01-SNAPSHOT</version>
    <packaging>jar</packaging>

    <!-- Bonita SP client and server -->
    <parent>
        <groupId>ch.vd.bpm.test</groupId>
        <artifactId>bonita-sp</artifactId>
        <version>7.4.1-vd-01-SNAPSHOT</version>
    </parent>

    <name>BonitaUnitTest</name>
    <description>Provides somes utilities to build Bonita platform and other Bonita stuff</description>
    <url>http://maven.apache.org</url>
   
    <scm>
        <url>http://svn.etat-de-vaud.ch/SVN_ACI/dperm/trunk/040_Realisation/Developpement/dperm-bonita/tools/bonita-toolbox</url>
        <connection>scm:svn:http://svn.etat-de-vaud.ch/SVN_ACI/dperm/trunk/040_Realisation/Developpement/dperm-bonita/tools/bonita-toolbox</connection>
    </scm>

    <distributionManagement>
        <repository>
            <id>DSI Releases</id>
            <name>Release repository</name>
            <url>http://spip.etat-de-vaud.ch:8081/nexus/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>DSI Snapshots</id>
            <name>Release repository</name>
            <url>http://spip.etat-de-vaud.ch:8081/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>



    <repositories>
        <repository>
            <id>OW2 repository</id>
            <name>OW2 repository</name>
            <url>http://maven.ow2.org/maven2</url>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>ch.vd.socle.bpm</groupId>
            <artifactId>bonita-migration</artifactId>
            <version>1.1.0-SNAPSHOT</version>
        </dependency>


        <dependency>
            <groupId>org.apache.activemq</groupId>
            <artifactId>activemq-all</artifactId>
            <version>5.11.0.redhat-620133</version>
        </dependency>


        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
        </dependency>
        
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.3.170</version>
            <scope>runtime</scope>
        </dependency>
        
        <!-- Transaction -->
        <dependency>
            <groupId>org.codehaus.btm</groupId>
            <artifactId>btm</artifactId>
            <version>2.1.3</version>
        </dependency>
 
        <dependency>
            <groupId>javax.transaction</groupId>
            <artifactId>jta</artifactId>
            <version>1.1</version>
        </dependency>
 
        <dependency>
            <groupId>com.jolbox</groupId>
            <artifactId>bonecp</artifactId>
            <version>0.7.1.RELEASE</version>
        </dependency>
                
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>4.2.4.RELEASE</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jms</artifactId>
            <version>4.2.4.RELEASE</version>
        </dependency>


        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.6.6</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                    <properties>

                    </properties>
                    <systemPropertyVariables>
                        <sysprop.bonita.db.vendor>h2</sysprop.bonita.db.vendor>
                        <bonita.home>${bonita.home}</bonita.home>
                        <bonita.client>${bonita.client}</bonita.client>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.10</version>
                <executions>
                    <execution>
                        <id>unpackLicenses</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>ch.vd.bpm.test</groupId>
                                    <artifactId>bonita-licenses</artifactId>
                                    <version>7-SNAPSHOT</version>
                                    <classifier>licensesDEV-resources</classifier>
                                    <overWrite>false</overWrite>
                                    <type>zip</type>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${bonita.client}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
</project>
